fixing overflow issue

--- a/default.css
+++ b/default.css
@@ -26,7 +26,7 @@ html, body{
 }
 
 body *{
-	transition: 0.3s;
+	transition: 0.2s;
 }
 
 
@@ -61,13 +61,16 @@ h6 { font-size: 16px;}
 .s1{
 	background-color: var(--mainColor);
 	border-bottom:1px solid var(--borderColor);
-	overflow:auto;
+	/* overflow: -moz-hidden-unscrollable; */
+	overflow: hidden;
+	
 }
 
 .s2{
 	background-color: var(--secondaryColor);
 	border-bottom:1px solid var(--borderColor);
-	overflow:auto;
+	/* overflow:hidden; */
+	overflow: hidden;
 }
 
 
@@ -76,6 +79,7 @@ h6 { font-size: 16px;}
 .main-container{
 	width: 1200px;
 	margin: 0 auto;
+	margin-bottom: 5px;
 }
 
 
